code/4-Gateway/virtualservice-dashboard.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dashboard
spec:
  hosts:
    - my-sample-app.io
  gateways:
    - my-sample-app
  http:
    - match:
        - uri:
            prefix: /dashboard/
      rewrite:
        uri: /
      route:
        - destination:
            host: dashboard.dashboard.svc.cluster.local
            port:
              number: 80
