code/4-Gateway/virtualservice-movies.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: movies
spec:
  hosts:
    - my-sample-app.io
  gateways:
    - my-sample-app
  http:
    - match:
        - uri:
            prefix: /movies/
      rewrite:
        uri: /
      route:
        - destination:
            host: movies.movies.svc.cluster.local
            port:
              number: 80
